languages/montiarcautomaton-fe/src/test/resources/invalid/LowerCaseAutomaton.maa
package invalid;

component LowerCaseAutomaton {
  port
    in Integer a;
  
  implementation lowercaseName {
  	variable int c;
  
  	state Start;
    initial Start;

    Start -> Start [c < 2];
  }
}
